# ServerManagerBot

./: .dockerignore  .env.example  .gitignore  CreateDB.ps1  Dockerfile  LICENSE  alembic.ini  config.py  docker-compose.yml  dockercompose.yml  install.sh  log.py  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build.yml  formatter.yml  pr_build.yml  pr_title_validation.yml  push_build.yml  release_build.yml
api/: __init__.py  hetzner.py
config/: __init__.py  env.py
data/: .info.json.example
keys/: __init__.py  action.py  callback.py  keyboard.py
keys/enums/: __init__.py  callbacks.py  servers.py
language/: __init__.py  keyboard.py  message.py
middlewares/: __init__.py  auth.py
models/: callbacks.py  servers.py
routers/: __init__.py  base.py  create.py  data.py  edit.py  server.py
routers/server/: __init__.py  create.py  data.py  edit.py  menu.py
src/: __init__.py  run.py
src/api/: __init__.py  manager.py
src/api/routers/: __init__.py  base.py  telegram.py
src/config/: __init__.py  env.py  tg.py
src/db/: __init__.py  core.py
src/db/migrations/: env.py
src/db/models/: __init__.py  _client.py  _setting.py  _user.py
src/handlers/: __init__.py  base.py  commands.py  fallback.py  middlewares.py
src/handlers/clients/: __init__.py  create.py  info.py  menu.py  (+1 more)
src/keys/: __init__.py  callback.py  manager.py
src/lang/: __init__.py  _button.py  _dialog.py
src/tasks/: __init__.py  manager.py  traffic_alert.py
src/utils/: depends.py  euro.py  state.py
utils/: __init__.py  hetzner.py  keys.py  lang.py  log.py
(+18 files in other folders)
