[tool.ruff]
line-length = 128

[project]
name = "ServerManagerBot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.4",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.42",
    "dotenv==0.9.9",
    "python-decouple==3.8",
    "eiogram==2.0.1",
    "hcloud==2.5.4",
    "apscheduler>=3.11.0",
    "aiohttp>=3.13.2",
]
